# doom_renderer

./: .gitignore  CMakeLists.txt  GenerateProject.bat  README.MD
src/: camera.h  doom.cpp  doom.h  doom_map.cpp  doom_map.h  line_renderer.cpp  line_renderer.h  main.cpp  mesh.h  model.h  plane_renderer.cpp  plane_renderer.h  render_node.cpp  render_tree.cpp  rendernode.h  rendertree.h  resource_manager.cpp  resource_manager.h  scene_builder.cpp  scenebuilder.h  shader.cpp  texture.cpp
